@@ -50,6 +50,9 @@ Release 2.7.3 - UNRELEASED
 
     YARN-4452. NPE when submit Unmanaged application. (Naganarasimha G R
     via junping_du)
+    
+    YARN-4546. ResourceManager crash due to scheduling opportunity overflow.
+    (Jason Lowe via junping_du)
 
 Release 2.7.2 - UNRELEASED
 
